--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CascadiaJS Heroku Test</title>
   <script type="text/javascript" src="emote.js"></script>
+  <style>
+    emote-widget {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+    }
+  </style>
 </head>
 <body>
-  <div style="margin-left: 200px; width: 600px;">
-    <emote-widget talk-id="heroku-test" position="bottom-right"></emote-widget>
-  </div>
+  <emote-widget talk-id="heroku-test" position="bottom-right"></emote-widget>
 </body>
 </html>
